--- a/list/src/main/res/layout/component_grid.xml
+++ b/list/src/main/res/layout/component_grid.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/component_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:listitem="@layout/item_horizontal"
         tools:itemCount="3"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
